--- a/action.yml
+++ b/action.yml
@@ -78,6 +78,7 @@ runs:
       run: |
         go install github.com/yannh/kubeconform/cmd/kubeconform@v0.6.1
         go install cuelang.org/go/cmd/cue@v0.4.3
+        mkdir -p ${RUNNER_TEMP}/yq
         wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O "${RUNNER_TEMP}/yq/yq"
         chmod +x "${RUNNER_TEMP}/yq/yq"
         echo "${RUNNER_TEMP}/yq" >> $GITHUB_PATH
